--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -8,6 +8,7 @@ on:
     branches: [ master ]
 jobs:
   build:
+    name: Push Docker image to ECR
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -17,5 +18,17 @@ jobs:
           java-version: '11'
           distribution: 'adopt'
           cache: maven
+      - name: Build and push Docker image
+        env:
+          AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+        run: |
+          aws ecr get-login-password --region eu-west-1 | docker login --username AWS --password-stdin 244530008913.dkr.ecr.eu-west-1.amazonaws.com
+          rev=$(git rev-parse --short HEAD)
+          docker build . -t hello
+          docker tag hello 244530008913.dkr.ecr.eu-west-1.amazonaws.com/saba012-private:$rev
+          docker tag hello 244530008913.dkr.ecr.eu-west-1.amazonaws.com/saba012-private:latest
+          docker push 244530008913.dkr.ecr.eu-west-1.amazonaws.com/saba012-private:$rev
+          docker push 244530008913.dkr.ecr.eu-west-1.amazonaws.com/saba012-private:latest
       - name: Build with Maven
         run: mvn -B package --file pom.xml
